--- a/Actuals_Kicker.ipynb
+++ b/Actuals_Kicker.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled72.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlP8glth4gTdtB88TxcNyX",
+      "authorship_tag": "ABX9TyNYzAt/n2HOUVF/nr3uKS0Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,8 @@
         "# Load the raw data\n",
         "player_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/players.csv')\n",
         "kicking_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/kicking.csv')\n",
-        "missed_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/missedfg.csv')"
+        "missed_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/missedfg.csv')\n",
+        "conv_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/conv.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -59,7 +60,7 @@
       "metadata": {
         "id": "C5jDOlYDwNei",
         "colab_type": "code",
-        "outputId": "ea892758-b05e-4857-f702-82ea4132725a",
+        "outputId": "318af45e-be2c-45e9-a9c7-48e713b76d0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -67,7 +68,7 @@
       },
       "source": [
         "# The players dataframe - includes all the kickers for the 2019 NFL season\n",
-        "player_df.head()# The defense dataframe - raw data was aggregated by team in excel to summarize the team NFL.com points"
+        "player_df.head()"
       ],
       "execution_count": 3,
       "outputs": [
@@ -172,7 +173,7 @@
       "metadata": {
         "id": "1-vOr55vwi61",
         "colab_type": "code",
-        "outputId": "d766a9c2-f7be-43e9-bc81-9573e70bc3e2",
+        "outputId": "134182f7-274d-463a-ac8b-c165ea23e337",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -353,11 +354,11 @@
       "metadata": {
         "id": "0EM8Vk6nKE_i",
         "colab_type": "code",
+        "outputId": "0208ea0e-8d3c-42aa-a644-a347ab17ca70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "2067a016-641e-4e1e-8bc7-e35b1aab05f8"
+        }
       },
       "source": [
         "# The missed field goal dataframe - raw missed field goal data for all 2019 kickers for seasons 2000-2019\n",
@@ -496,14 +497,202 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "iIMYzPysEpmx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 309
+        },
+        "outputId": "89d396d7-950b-4314-82b4-853c3f8f1788"
+      },
+      "source": [
+        "# The two point conversion dataframe - raw data for all two point conversions\n",
+        "conv_df.head()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>pid</th>\n",
+              "      <th>gid</th>\n",
+              "      <th>year</th>\n",
+              "      <th>week</th>\n",
+              "      <th>type</th>\n",
+              "      <th>bc</th>\n",
+              "      <th>first_bc</th>\n",
+              "      <th>last_bc</th>\n",
+              "      <th>name_bc</th>\n",
+              "      <th>psr</th>\n",
+              "      <th>first_psr</th>\n",
+              "      <th>last_psr</th>\n",
+              "      <th>name_psr</th>\n",
+              "      <th>trg</th>\n",
+              "      <th>first_trg</th>\n",
+              "      <th>last_trg</th>\n",
+              "      <th>name_trg</th>\n",
+              "      <th>conv</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>456</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>PASS</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>RC-2800</td>\n",
+              "      <td>Randall</td>\n",
+              "      <td>Cunningham</td>\n",
+              "      <td>Randall Cunningham</td>\n",
+              "      <td>RI-0200</td>\n",
+              "      <td>Raghib</td>\n",
+              "      <td>Ismail</td>\n",
+              "      <td>Raghib Ismail</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1408</td>\n",
+              "      <td>9</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>RUSH</td>\n",
+              "      <td>JS-6500</td>\n",
+              "      <td>James</td>\n",
+              "      <td>Stewart</td>\n",
+              "      <td>James Stewart</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2528</td>\n",
+              "      <td>16</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>PASS</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>TB-0200</td>\n",
+              "      <td>Tony</td>\n",
+              "      <td>Banks</td>\n",
+              "      <td>Tony Banks</td>\n",
+              "      <td>BC-1600</td>\n",
+              "      <td>Ben</td>\n",
+              "      <td>Coates</td>\n",
+              "      <td>Ben Coates</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2779</td>\n",
+              "      <td>17</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>PASS</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>BF-0100</td>\n",
+              "      <td>Brett</td>\n",
+              "      <td>Favre</td>\n",
+              "      <td>Brett Favre</td>\n",
+              "      <td>TD-0800</td>\n",
+              "      <td>Tyrone</td>\n",
+              "      <td>Davis</td>\n",
+              "      <td>Tyrone Davis</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3052</td>\n",
+              "      <td>19</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>RUSH</td>\n",
+              "      <td>MA-1000</td>\n",
+              "      <td>Mike</td>\n",
+              "      <td>Anderson</td>\n",
+              "      <td>Mike Anderson</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    pid  gid  year  week  type  ...      trg first_trg last_trg       name_trg conv\n",
+              "0   456    3  2000     1  PASS  ...  RI-0200    Raghib   Ismail  Raghib Ismail    1\n",
+              "1  1408    9  2000     1  RUSH  ...      NaN       NaN      NaN            NaN    1\n",
+              "2  2528   16  2000     2  PASS  ...  BC-1600       Ben   Coates     Ben Coates    1\n",
+              "3  2779   17  2000     2  PASS  ...  TD-0800    Tyrone    Davis   Tyrone Davis    1\n",
+              "4  3052   19  2000     2  RUSH  ...      NaN       NaN      NaN            NaN    1\n",
+              "\n",
+              "[5 rows x 18 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "AeD9_pInxVkY",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "# Pull the stats to calculate the kicker points - the fp column is the points total for each game\n",
-        "def pull_stats(df, df1, df2, col, p, y, g):\n",
+        "def pull_stats(df, df1, df2, df3, col, p, y, g):\n",
         "    missedfg_points = 0\n",
+        "    conversion_points = 0\n",
         "    if (df[col].loc[(df['name']==p) & (df['year']==y) & (df['game']==g)].empty):\n",
         "        start_year = df1['start'].loc[(df1['name']==p)].iloc[0]\n",
         "        if y < start_year:\n",
@@ -511,9 +700,15 @@
         "        else:\n",
         "            points = 0\n",
         "    else:\n",
+        "        conversion_points1 = df3['conv'].loc[(df3['name_bc']==p) & (df3['year']==y) & (df3['week']==g)].count()\n",
+        "        conversion_points2 = df3['conv'].loc[(df3['name_psr']==p) & (df3['year']==y) & (df3['week']==g)].count()\n",
+        "        conversion_points3 = df3['conv'].loc[(df3['name_trg']==p) & (df3['year']==y) & (df3['week']==g)].count()\n",
+        "\n",
+        "        conversion_points = conversion_points1 + conversion_points2 + conversion_points3\n",
         "        missedfg_points = df2['good'].loc[(df2['name']==p) & (df2['year']==y) & (df2['week']==g)].count()\n",
         "        points = df[col].loc[(df['name']==p) & (df['year']==y) & (df['game']==g)].iloc[0]\n",
-        "    return points - missedfg_points"
+        "\n",
+        "    return points - missedfg_points + conversion_points"
       ],
       "execution_count": 0,
       "outputs": []
@@ -527,7 +722,7 @@
       },
       "source": [
         "# Add a row to the final_df dataframe\n",
-        "# Each row represents the actual defense points for each game for each player (team)\n",
+        "# Each row represents the actual kicking points for each game for each kicker\n",
         "def add_row(df, p, f, l, n, pos, value_list):\n",
         "\n",
         "    df = df.append({'player': p,\n",
@@ -1215,7 +1410,7 @@
         "\n",
         "    for year in range(2000,2020):\n",
         "        for game in range(1,17):\n",
-        "            score = pull_stats(kicking_df, player_df, missed_df, 'fp', player, year, game)\n",
+        "            score = pull_stats(kicking_df, player_df, missed_df, conv_df, 'fp', player, year, game)\n",
         "\n",
         "            player_scores.append(score)\n",
         "\n",
@@ -1229,7 +1424,7 @@
       "metadata": {
         "id": "oDFK3RS456ys",
         "colab_type": "code",
-        "outputId": "bd8f8abd-01d7-43c0-8fb6-0acb63058f0e",
+        "outputId": "7e97aaf4-93da-4c6e-d334-26c9f347d105",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1238,7 +1433,7 @@
       "source": [
         "final_df.head(50)"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4930,7 +5125,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
