--- a/Actuals_Offense.ipynb
+++ b/Actuals_Offense.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled74.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNezW9fLpcxCJ/b+6EZWRjv",
+      "authorship_tag": "ABX9TyP/XFmKQm8yLkcjStPgv0l1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,16 +58,16 @@
       "metadata": {
         "id": "O_pDKtnOSYBT",
         "colab_type": "code",
+        "outputId": "6a81e7f4-cf75-4982-b208-adf3a20d1167",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "fdfabad0-d289-4bd7-ba21-a8c27fb8f569"
+        }
       },
       "source": [
         "player_df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +161,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 3
         }
       ]
     },
@@ -170,16 +170,16 @@
       "metadata": {
         "id": "q0b3DP9LScDh",
         "colab_type": "code",
+        "outputId": "ac4a22ae-7425-4f2b-f667-0f7892800cc3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "49435fdb-2cae-4804-a796-f20e9ffe7c53"
+        }
       },
       "source": [
         "offense_df.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,6 +205,7 @@
               "      <th></th>\n",
               "      <th>uid</th>\n",
               "      <th>gid</th>\n",
+              "      <th>week</th>\n",
               "      <th>player</th>\n",
               "      <th>del</th>\n",
               "      <th>first</th>\n",
@@ -245,6 +246,7 @@
               "      <th>0</th>\n",
               "      <td>3599</td>\n",
               "      <td>175</td>\n",
+              "      <td>13</td>\n",
               "      <td>TB-2300</td>\n",
               "      <td>KEEP</td>\n",
               "      <td>Tom</td>\n",
@@ -283,6 +285,7 @@
               "      <th>1</th>\n",
               "      <td>5841</td>\n",
               "      <td>284</td>\n",
+              "      <td>2</td>\n",
               "      <td>TB-2300</td>\n",
               "      <td>KEEP</td>\n",
               "      <td>Tom</td>\n",
@@ -321,6 +324,7 @@
               "      <th>2</th>\n",
               "      <td>6050</td>\n",
               "      <td>295</td>\n",
+              "      <td>3</td>\n",
               "      <td>TB-2300</td>\n",
               "      <td>KEEP</td>\n",
               "      <td>Tom</td>\n",
@@ -359,6 +363,7 @@
               "      <th>3</th>\n",
               "      <td>6330</td>\n",
               "      <td>308</td>\n",
+              "      <td>4</td>\n",
               "      <td>TB-2300</td>\n",
               "      <td>KEEP</td>\n",
               "      <td>Tom</td>\n",
@@ -397,6 +402,7 @@
               "      <th>4</th>\n",
               "      <td>6672</td>\n",
               "      <td>325</td>\n",
+              "      <td>5</td>\n",
               "      <td>TB-2300</td>\n",
               "      <td>KEEP</td>\n",
               "      <td>Tom</td>\n",
@@ -436,20 +442,20 @@
               "</div>"
             ],
             "text/plain": [
-              "    uid  gid   player   del first   last  ...    fp2    fp3  game  seas  year  team\n",
-              "0  3599  175  TB-2300  KEEP   Tom  Brady  ...   0.24   0.24     0     1  2000    NE\n",
-              "1  5841  284  TB-2300  KEEP   Tom  Brady  ...   2.74   2.74     0     2  2001    NE\n",
-              "2  6050  295  TB-2300  KEEP   Tom  Brady  ...   6.92   6.92     0     2  2001    NE\n",
-              "3  6330  308  TB-2300  KEEP   Tom  Brady  ...   0.34   2.34     0     2  2001    NE\n",
-              "4  6672  325  TB-2300  KEEP   Tom  Brady  ...  22.56  25.56     0     2  2001    NE\n",
+              "    uid  gid  week   player   del first  ...    fp2    fp3 game  seas  year  team\n",
+              "0  3599  175    13  TB-2300  KEEP   Tom  ...   0.24   0.24    0     1  2000    NE\n",
+              "1  5841  284     2  TB-2300  KEEP   Tom  ...   2.74   2.74    0     2  2001    NE\n",
+              "2  6050  295     3  TB-2300  KEEP   Tom  ...   6.92   6.92    0     2  2001    NE\n",
+              "3  6330  308     4  TB-2300  KEEP   Tom  ...   0.34   2.34    0     2  2001    NE\n",
+              "4  6672  325     5  TB-2300  KEEP   Tom  ...  22.56  25.56    0     2  2001    NE\n",
               "\n",
-              "[5 rows x 35 columns]"
+              "[5 rows x 36 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 4
         }
       ]
     },
@@ -461,10 +467,10 @@
         "colab": {}
       },
       "source": [
-        "# Pull the stats to calculate the kicker points - the fp column is the points total for each game\n",
-        "def pull_stats(df, col, p, y, g):\n",
+        "# Pull the stats to calculate the player points\n",
+        "def pull_stats(df, df1, col, p, y, g):\n",
         "\n",
-        "    if (df[col].loc[(df['name']==p) & (df['year']==y) & (df['game']==g)].empty):\n",
+        "    if (df[col].loc[(df['name']==p) & (df['year']==y) & (df['week']==g)].empty):\n",
         "        start_year = df1['start'].loc[(df1['name']==p)].iloc[0]\n",
         "        if y < start_year:\n",
         "            points = float('NaN')\n",
@@ -472,12 +478,47 @@
         "            points = 0\n",
         "    else:\n",
         "\n",
-        "        points = df[col].loc[(df['name']==p) & (df['year']==y) & (df['game']==g)].iloc[0]\n",
+        "        points = df[col].loc[(df['name']==p) & (df['year']==y) & (df['week']==g)].iloc[0]\n",
         "\n",
         "    return points"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eZbIZpdJcR4D",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b5e177f6-91f9-4219-dac1-cbd0fd9ae42d"
+      },
+      "source": [
+        "player = 'Tom Brady'\n",
+        "year = 2001,\n",
+        "week = 2\n",
+        "\n",
+        "test = pull_stats(offense_df, player_df, 'tdp', player, year, week)\n",
+        "test"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     }
   ]
 }
