--- a/Rookie_Kickers.ipynb
+++ b/Rookie_Kickers.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled78.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+CAysLwc5pRtVxSVoFUpE",
+      "authorship_tag": "ABX9TyMknlcKEvXZNibarbTSYvdQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,11 +84,11 @@
       "metadata": {
         "id": "TejDRzCRssXB",
         "colab_type": "code",
+        "outputId": "ba465e6c-bc2e-412f-cc84-9874bd184f99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
-        },
-        "outputId": "42a0075b-da64-4057-ed05-0346f1f4dd61"
+        }
       },
       "source": [
         "player_df.head()"
@@ -300,11 +300,11 @@
       "metadata": {
         "id": "ipRc24Sns4z0",
         "colab_type": "code",
+        "outputId": "4d82ce93-b527-4eaa-a7df-5a8691ec943e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "4088a5ac-9170-4bdc-c72c-d8acbe629e23"
+        }
       },
       "source": [
         "actuals_df.head()"
@@ -547,7 +547,7 @@
         "    dpos = player_df['dpos'].loc[(player_df['name']==player)].iloc[0]\n",
         "    college = player_df['col'].loc[(player_df['name']==player)].iloc[0]\n",
         "    division = player_df['dv'].loc[(player_df['name']==player)].iloc[0]\n",
-        "    points = 10\n",
+        "    points = actuals_df.loc[(actuals_df['name']==player)].iloc[0, 5:21].sum()\n",
         "\n",
         "    final_df = final_df.append({'player': player,\n",
         "                                'position1': position1,\n",
@@ -576,16 +576,16 @@
       "metadata": {
         "id": "bhyiPNCtzkk1",
         "colab_type": "code",
+        "outputId": "b5686c94-25ab-4c4c-f3a0-beaf2d391d9a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
-        },
-        "outputId": "be683a0b-45d8-44d7-dc6d-fa43dbee523e"
+        }
       },
       "source": [
         "final_df.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,7 +645,7 @@
               "      <td>0.0</td>\n",
               "      <td>South Dakota State</td>\n",
               "      <td>0</td>\n",
-              "      <td>10</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -664,7 +664,7 @@
               "      <td>0.0</td>\n",
               "      <td>Baylor</td>\n",
               "      <td>Big 12</td>\n",
-              "      <td>10</td>\n",
+              "      <td>106</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -683,7 +683,7 @@
               "      <td>0.0</td>\n",
               "      <td>Penn State</td>\n",
               "      <td>Big Ten</td>\n",
-              "      <td>10</td>\n",
+              "      <td>83</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -702,7 +702,7 @@
               "      <td>47.0</td>\n",
               "      <td>Ohio State</td>\n",
               "      <td>Big Ten</td>\n",
-              "      <td>10</td>\n",
+              "      <td>92</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -721,7 +721,7 @@
               "      <td>118.0</td>\n",
               "      <td>Memphis</td>\n",
               "      <td>Conference USA (C-USA)</td>\n",
-              "      <td>10</td>\n",
+              "      <td>117</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -729,11 +729,11 @@
             ],
             "text/plain": [
               "               player position1  ...                      dv  points\n",
-              "0      Adam Vinatieri         K  ...                       0      10\n",
-              "1         Matt Bryant         K  ...                  Big 12      10\n",
-              "2        Robbie Gould         K  ...                 Big Ten      10\n",
-              "3         Mike Nugent         K  ...                 Big Ten      10\n",
-              "4  Stephen Gostkowski         K  ...  Conference USA (C-USA)      10\n",
+              "0      Adam Vinatieri         K  ...                       0       0\n",
+              "1         Matt Bryant         K  ...                  Big 12     106\n",
+              "2        Robbie Gould         K  ...                 Big Ten      83\n",
+              "3         Mike Nugent         K  ...                 Big Ten      92\n",
+              "4  Stephen Gostkowski         K  ...  Conference USA (C-USA)     117\n",
               "\n",
               "[5 rows x 16 columns]"
             ]
@@ -741,7 +741,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     }
