--- a/Rookie_2019_Offense_Calc.ipynb
+++ b/Rookie_2019_Offense_Calc.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled76.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP0fKftIgt+UYfloVLsBDUY",
+      "authorship_tag": "ABX9TyOWEix03BwnsNOhHWDACE25",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,10 +67,10 @@
         }
       },
       "source": [
-        "# The dataframe of all 2019 non-rookie offensive players and their rookie year\n",
+        "# The dataframe of all 2019 rookie offensive players\n",
         "player_df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +183,7 @@
         "# The offense dataframe - raw offensive data for all 2019 QBs, RBs, WRs, TEs for seasons 2000-2019\n",
         "offense_df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,7 +478,7 @@
         "# The touchdown dataframe - raw touchdown data for rushing, receiving and passing TD plays of 40 yards and greater.\n",
         "td_df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +671,7 @@
         "# The game dataframe - raw game data to calculate bye weeks\n",
         "game_df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1021,7 +1021,7 @@
         "\n",
         "    final_df = add_row(final_df, player, first, last, name, position1, player_scores)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,7 +1147,7 @@
       "source": [
         "final_df.head(50)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
