--- a/Prediction_Defense3.ipynb
+++ b/Prediction_Defense3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled77.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNuuT/PSG8dV2f/bwJATIYY",
+      "authorship_tag": "ABX9TyOim/NvK1Ru2t9F6ZoE5NON",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1797,6 +1797,20 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "edJN4vGlaS07",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Save the results to .csv file\n",
+        "final_df.to_csv('/content/week1-pred-defense.csv', index=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
