--- a/predictions/Predictions_Rookies.ipynb
+++ b/predictions/Predictions_Rookies.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled78.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOH69TvkBqDWfpy23osYRQj",
+      "authorship_tag": "ABX9TyOUqnxJCOZ1PNA2B1Gra0zC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "TejDRzCRssXB",
         "colab_type": "code",
-        "outputId": "806a6a15-dceb-44c6-911a-ea9ebab4cc26",
+        "outputId": "c58c097c-e39f-4f28-9ce3-324e7082572f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "ipRc24Sns4z0",
         "colab_type": "code",
-        "outputId": "e0f0ddd4-776f-4f15-bb23-954f6916cbed",
+        "outputId": "2f11d57c-1da9-4ce7-f6bb-6a32b9f7d728",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -511,11 +511,11 @@
       "metadata": {
         "id": "xQsbhKXUD1kP",
         "colab_type": "code",
+        "outputId": "25d32bfb-a94f-4f90-feab-51b0ad0d5f38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "60ee1311-43f1-4398-f344-cc08bb8a6891"
+        }
       },
       "source": [
         "rookies_df.head()"
@@ -623,11 +623,11 @@
       "metadata": {
         "id": "CM9b9lzfDmv1",
         "colab_type": "code",
+        "outputId": "fe2d7f5a-7b78-4ba6-c9c2-0e0e1d8ba778",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 275
-        },
-        "outputId": "73e5cb9a-a55d-4098-cea0-5b6eeacba5ba"
+        }
       },
       "source": [
         "actuals2019_df.head()"
@@ -778,7 +778,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>David Blough</td>\n",
+              "      <td>DB-2750</td>\n",
               "      <td>David</td>\n",
               "      <td>Blough</td>\n",
               "      <td>David Blough</td>\n",
@@ -810,7 +810,7 @@
               "1  Chase McLaughlin   Chase  McLaughlin  ...    0.0   0.00    0.00\n",
               "2    Austin Seibert  Austin     Seibert  ...    7.0   3.00    6.00\n",
               "3         Joey Slye    Joey        Slye  ...    8.0   8.00    4.00\n",
-              "4      David Blough   David      Blough  ...    8.3   8.68   11.88\n",
+              "4           DB-2750   David      Blough  ...    8.3   8.68   11.88\n",
               "\n",
               "[5 rows x 21 columns]"
             ]
@@ -927,7 +927,7 @@
       "source": [
         "train_df.tail()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1092,16 +1092,16 @@
       "metadata": {
         "id": "NGbgn6O-9TaN",
         "colab_type": "code",
+        "outputId": "b267c077-2f15-4597-956f-49843db149a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
-        },
-        "outputId": "b267c077-2f15-4597-956f-49843db149a8"
+        }
       },
       "source": [
         "test_df.tail()"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1333,7 +1333,7 @@
         "print('Test Mean Absolute Error:', test_mae)\n",
         "print('Test R^2:', test_r2)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1355,19 +1355,22 @@
       "metadata": {
         "id": "Sd2qZwHm_Yi2",
         "colab_type": "code",
+        "outputId": "55cee716-65c0-4437-d011-4eb511a6c24f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
-        },
-        "outputId": "55cee716-65c0-4437-d011-4eb511a6c24f"
+        }
       },
       "source": [
-        "final_df = test_df.copy()\n",
-        "final_df = final_df.reset_index()\n",
-        "final_df['prediction'] = ty_pred\n",
-        "final_df.head()"
+        "final_df = test_df\n",
+        "# The final_df dataframe\n",
+        "final_df['week1-pred-rank'] = final_df['week1-prediction'].rank(ascending=False)\n",
+        "final_df['week1-act-rank'] = final_df['week1-actual'].rank(ascending=False)\n",
+        "final_df['week1-diff'] = final_df['week1-prediction'] - final_df['week1-actual']\n",
+        "final_df['week1-prediction'] = final_df['week1-prediction'].astype(int)\n",
+        "final_df['week1-diff'] = final_df['week1-diff'].astype(int)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
